Input with text and image working decently

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">HybridTextImageInput</string>
+    <string name="app_name">Hybrid Text Image</string>
+    <string name="note_text_hint">Write a note&#8230;</string>
+    <string name="select_images_chooser_title">Select images to post</string>
 </resources>
